fix(script): handle overflow when list gets larger

--- a/style.css
+++ b/style.css
@@ -3,11 +3,19 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  justify-content: space-between;
   height: 100vh;
   background: url('assets/background.png') no-repeat center center fixed;
   background-size: cover;
+}
+
+.container {
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: rgb(153, 149, 149) rgb(78, 74, 74);
 }
 
 h1 {
@@ -42,7 +50,7 @@ h1 {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   width: 100%;
   max-width: 600px;
-  margin: 0 auto;
+  margin: 4px auto;
 }
 
 .js-add-button {
@@ -123,7 +131,6 @@ footer {
   color: #2a2929;
   text-align: center;
   padding: 20px 0;
-  position: fixed;
   width: 100%;
   bottom: 0;
   font-size: 1rem;
